--- a/剑指/剑指.vcxproj
+++ b/剑指/剑指.vcxproj
@@ -155,7 +155,7 @@
     <ClCompile Include="56_1.cpp" />
     <ClCompile Include="56_2.cpp" />
     <ClCompile Include="6.cpp" />
-    <ClCompile Include="源.cpp" />
+    <ClCompile Include="7.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
