--- a/剑指/剑指.vcxproj.filters
+++ b/剑指/剑指.vcxproj.filters
@@ -30,9 +30,6 @@
     <ClCompile Include="3_2.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
-    <ClCompile Include="源.cpp">
-      <Filter>源文件</Filter>
-    </ClCompile>
     <ClCompile Include="4.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
@@ -40,6 +37,9 @@
       <Filter>源文件</Filter>
     </ClCompile>
     <ClCompile Include="6.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="7.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
