--- a/算法/算法.vcxproj.filters
+++ b/算法/算法.vcxproj.filters
@@ -18,5 +18,8 @@
     <ClCompile Include="LRU.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="O(1)查找数组元素.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
