--- a/剑指/剑指.vcxproj
+++ b/剑指/剑指.vcxproj
@@ -156,6 +156,7 @@
     <ClCompile Include="56_2.cpp" />
     <ClCompile Include="6.cpp" />
     <ClCompile Include="7.cpp" />
+    <ClCompile Include="9cpp.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
