--- a/剑指/剑指.vcxproj.filters
+++ b/剑指/剑指.vcxproj.filters
@@ -45,5 +45,8 @@
     <ClCompile Include="9cpp.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="10cpp.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
