--- a/剑指/剑指.vcxproj
+++ b/剑指/剑指.vcxproj
@@ -147,7 +147,9 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="..\2、数据结构\试题.cpp" />
     <ClCompile Include="10cpp.cpp" />
+    <ClCompile Include="12.cpp" />
     <ClCompile Include="3_1.cpp" />
     <ClCompile Include="33.cpp" />
     <ClCompile Include="3_2.cpp" />
