--- a/C++基本测试/C++基本测试.vcxproj.filters
+++ b/C++基本测试/C++基本测试.vcxproj.filters
@@ -48,5 +48,8 @@
     <ClCompile Include="大小写转换.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="左值、右值.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
