--- a/百度/百度.vcxproj.filters
+++ b/百度/百度.vcxproj.filters
@@ -15,13 +15,13 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="第三题.cpp">
-      <Filter>源文件</Filter>
-    </ClCompile>
     <ClCompile Include="百度第一题.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
     <ClCompile Include="百度第二题.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="百度第三题.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
