--- a/华为/华为.vcxproj.filters
+++ b/华为/华为.vcxproj.filters
@@ -15,13 +15,13 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="第一题.cpp">
+    <ClCompile Include="华为第三题.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
-    <ClCompile Include="第二题.cpp">
+    <ClCompile Include="华为第一题.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
-    <ClCompile Include="第三题.cpp">
+    <ClCompile Include="华为第二题.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
