--- a/2、数据结构/2、数据结构.vcxproj.filters
+++ b/2、数据结构/2、数据结构.vcxproj.filters
@@ -39,6 +39,9 @@
     <ClCompile Include="8、Search.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="vector.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Bubblesort.h">
